Fix hero height on mobile + revert line-height

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -39,6 +39,7 @@ body {
     background: var(--surface-1);
     color: var(--text-primary);
     font-family: system-ui, sans-serif;
+    line-height: 1.5;
     margin: 0;
 }
 
@@ -166,7 +167,7 @@ header a {
     align-content: center;
     display: flex;
     flex-wrap: wrap;
-    min-height: calc(100vh - 4rem);
+    min-height: calc(100svh - 4rem);
 }
 
 .hero-content {
@@ -876,7 +877,7 @@ footer {
 }
 
 .popover-content {
-    max-height: calc(100vh - 8em);
+    max-height: calc(100svh - 8em);
     overflow-y: auto;
 }
 
@@ -920,7 +921,7 @@ body>section.scrolled {
         background-color: var(--surface-0);
         display: flex;
         flex-direction: column;
-        height: calc(100vh - 5.5rem);
+        height: calc(100svh - 5.5rem);
         overflow-y: auto;
         padding: 1rem;
         position: absolute;
